--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,39 +22,42 @@ jobs:
           # Remove any existing rule with the same name to avoid duplication
           netsh advfirewall firewall delete rule name="RDP-Tailscale"
           
-          # Allow any incoming connection on port 3389
+          # Allow incoming connections on port 3389
           netsh advfirewall firewall add rule name="RDP-Tailscale" `
             dir=in action=allow protocol=TCP localport=3389
 
           # Restart Remote Desktop service to apply changes
           Restart-Service -Name TermService -Force
 
-      - name: Create RDP User with Secure Password
+      - name: Create RDP User with your Password
         run: |
-          Add-Type -AssemblyName System.Security
-          $charSet = @{
-              Upper   = [char[]](65..90)
-              Lower   = [char[]](97..122)
-              Number  = [char[]](48..57)
-              Special = ([char[]](33..47) + [char[]](58..64) +
-                         [char[]](91..96) + [char[]](123..126))
-          }
-          $rawPassword = @()
-          $rawPassword += $charSet.Upper | Get-Random -Count 4
-          $rawPassword += $charSet.Lower | Get-Random -Count 4
-          $rawPassword += $charSet.Number | Get-Random -Count 4
-          $rawPassword += $charSet.Special | Get-Random -Count 4
-          $password = -join ($rawPassword | Sort-Object { Get-Random })
+          # Use your provided password (as plain text here)
+          $password = '12QWwq21'
           $securePass = ConvertTo-SecureString $password -AsPlainText -Force
-          New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires
-          Add-LocalGroupMember -Group "Administrators" -Member "RDP"
-          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP"
-          
-          echo "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
-          
-          if (-not (Get-LocalUser -Name "RDP")) {
+
+          # Create the local user and add to groups
+          if (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue) {
+              Write-Host "User 'RDP' already exists. Setting password and ensuring group membership..."
+              # Set password for existing user
+              $user = Get-LocalUser -Name "RDP"
+              $user | Set-LocalUser -Password $securePass
+          } else {
+              New-LocalUser -Name "RDP" -Password $securePass -AccountNeverExpires -Description "RDP access user"
+          }
+
+          # Add to groups (Administrators + Remote Desktop Users)
+          Add-LocalGroupMember -Group "Administrators" -Member "RDP" -ErrorAction SilentlyContinue
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "RDP" -ErrorAction SilentlyContinue
+
+          # Export credentials to GITHUB_ENV for later steps (will appear in runner logs)
+          Write-Output "RDP_CREDS=User: RDP | Password: $password" >> $env:GITHUB_ENV
+
+          # Verify creation
+          if (-not (Get-LocalUser -Name "RDP" -ErrorAction SilentlyContinue)) {
               Write-Error "User creation failed"
               exit 1
+          } else {
+              Write-Host "RDP user ready."
           }
 
       - name: Install Tailscale
@@ -70,25 +73,26 @@ jobs:
         run: |
           # Bring up Tailscale with custom hostname "CodeV"
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=CodeV
-          
-          echo "TAILSCALE_HOSTNAME=CodeV" >> $env:GITHUB_ENV
+
+          # Expose the hostname to later steps
+          Write-Output "TAILSCALE_HOSTNAME=CodeV" >> $env:GITHUB_ENV
 
       - name: Verify RDP Accessibility
         run: |
           Write-Host "Testing RDP connectivity to $env:TAILSCALE_HOSTNAME"
-          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_HOSTNAME -Port 3389
+          $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_HOSTNAME -Port 3389 -WarningAction SilentlyContinue
           if (-not $testResult.TcpTestSucceeded) {
               Write-Error "TCP connection to RDP port 3389 failed"
               exit 1
           }
-          Write-Host " TCP connectivity successful!"
+          Write-Host "TCP connectivity successful!"
 
       - name: Maintain Connection
         run: |
           Write-Host "`n=== RDP ACCESS ==="
           Write-Host "Address: $env:TAILSCALE_HOSTNAME"
-          Write-Host "Username: RDP"
-          Write-Host "Password: $(echo $env:RDP_CREDS)"
+          # RDP_CREDS contains both user and password in one line
+          Write-Host "Credentials: $env:RDP_CREDS"
           Write-Host "==================`n"
           
           # Keep runner active indefinitely
